fix: add margin top to product pages to prevent nav bar from overlapping content

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -49,7 +49,7 @@ body {
 }
 
 .margin-top-div{
-    margin-top: 50px !important;
+    margin-top: 20px !important;
 }
 
 .margin-bottom-div{
